--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "polkadot-validators-stats",
+  "name": "PolkaStats",
   "version": "1.0.0",
-  "description": "Polkadot active validator statistics",
+  "description": "Polkadot network statistics",
   "author": "Mario Pino Uceda",
   "private": true,
   "scripts": {
