--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/google-analytics": "^2.2.0",
+    "@polkadot/util": "^0.94.1",
+    "@polkadot/util-crypto": "^0.94.1",
     "apexcharts": "^3.8.2",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "cookie-universal-nuxt": "^2.0.16",
+    "jdenticon": "^2.2.0",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "nuxt": "^2.0.0",
